--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-URLDB="mongodb://127.0.0.1:27017/online-shop"
-URLDBTEST="mongodb://127.0.0.1:27017/online-shop"
+URLDB="mongodb+srv://root:upgradehub@cluster.sd7xu.mongodb.net/"
+URLDBTEST="mongodb+srv://root:upgradehub@cluster.sd7xu.mongodb.net/"
